Fix article spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -229,7 +229,11 @@ hr {
 }
 
 .article {
-  height:75px;
+  min-height: 60px;
+}
+
+.article p {
+  margin: 0 0 20px 61px;
 }
 
 .thumbnail {
